<resources>
    <string name="app_name">schoolhub</string>
    <string name="task_title">Task Title</string>
    <string name="task_icon">Task Icon</string>
    <string name="welcome_teacher">Welcome, Teacher!</string>
    <string name="publish_marks_button">Publish Marks</string>
    <string name="send_assignment_button">Send Assignment</string>
    <string name="title_activity_publish_marks">Publish Marks</string>
    <string name="title_activity_send_assignment">Send Assignment</string>
    <string name="exam_name_hint">Exam Name (e.g., Midterm)</string>
    <string name="mark_hint">Mark</string>
    <string name="publish_button">Publish</string>
    <string name="assignment_title_hint">Assignment Title</string>
    <string name="assignment_description_hint">Assignment Description</string>
    <string name="attach_file_button">Attach File (Optional)</string>
    <string name="choose_file">Choose a file to attach (optional)</string>
    <string name="send_button">Send</string>
    <string name="schedule_title">My Teaching Schedule</string>
    <string name="select_day">Select Day</string>
    <string name="no_schedule_found">No schedule found for this day</string>
    <string name="back_button">Back</string>
    <string name="view_schedule_button">View My Schedule</string>
    <string name="error_loading_schedule">Error loading schedule</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="add_new_teacher">Add New Teacher</string>
    <string name="full_name">Full Name</string>
    <string name="national_id">National ID</string>
    <string name="address">Address</string>
    <string name="birth_date">Birth Date</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="add_teacher">Add Teacher</string>
    <string name="add_new_student">Add New Student</string>
    <string name="add_student">Add Student</string>
    <string name="role">Role</string>
    <string name="task_name">Task Name</string>
    <string name="subject_teacher">Subject - Teacher</string>
    <string name="description_goes_here">Description goes here</string>
    <string name="log_in">Log In</string>
    <string name="day_of_week">Day of Week</string>
    <string name="subject">Subject</string>
    <string name="class_grade_1_12">Class Grade (1-12)</string>
    <string name="period_number_1_5">Period Number (1-5)</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="add_period">Add Period</string>
    <string name="add_subject">Add Subject</string>
    <string name="assign_exam">Assign Exam</string>

    <string name="announcements_list_desc">List of announcements</string>
    <string name="news_list_desc">List of news</string>
    <string name="preparation_list_desc">List of preparation plans</string>
    <string name="back">Back</string>
    <string name="learning_resources">Learning Resources</string>
    <string name="resource_list">List of learning resources</string>
    <string name="no_resources">No resources available.</string>
    <string name="previous_week">Previous Week</string>
    <string name="today">Today</string>
    <string name="next_week">Next Week</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="schedule_list">Schedule list</string>
    <string name="publish_marks">Publish Marks</string>
    <string name="send_messagesn">Send Messagesn</string>
    <string name="add_preparatio">Add Preparatio</string>
</resources>
