<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/textTitle"
        android:text="@string/add_new_teacher"
        style="@style/titleText"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editFullName"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"/>

            <EditText
                android:id="@+id/editNationalId"
                android:hint="@string/national_id"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"/>

            <EditText
                android:id="@+id/editAddress"
                android:hint="@string/address"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"/>

            <EditText
                android:id="@+id/editBirthDate"
                android:hint="@string/birth_date"
                android:focusable="false"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                />

            <EditText
                android:id="@+id/editEmail"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"/>

            <EditText
                android:id="@+id/editPassword"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"/>

            <Button
                android:id="@+id/btnAddteacher"
                style="@style/Button"
                android:text="@string/add_teacher"
                />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/customBottomNav"
        style="@style/customBottomNav">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="8dp">

            <ImageView
                android:id="@+id/profile"
                style="@style/BottomNavIconStyle"
                android:src="@drawable/ic_profile1"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="8dp">

            <ImageView
                android:id="@+id/home"
                style="@style/BottomNavIconStyle"
                android:src="@drawable/ic_home"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="8dp">

            <ImageView
                android:id="@+id/logout"
                style="@style/BottomNavIconStyle"
                android:src="@drawable/ic_logout"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
