<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="24dp"
    tools:context=".TeacherScheduleActivity">

    <TextView
        android:id="@+id/textViewScheduleTitle"
       style="@style/titleText"
        android:text="@string/schedule_title"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/teal_primary"

            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_day"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinnerDays"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"

                android:padding="8dp"
                android:minHeight="48dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewSchedule"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/textViewNoSchedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_schedule_found"
        android:textSize="16sp"
        android:gravity="center"
        android:visibility="gone"
        android:layout_margin="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <Button
            android:id="@+id/buttonBack"
android:layout_margin="12dp"
            android:text="@string/back_button"
           style="@style/Button" />
    </LinearLayout>

</LinearLayout>

