<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/white"
    tools:context=".TeacherDashboardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewWelcome"
           style="@style/titleText"
            android:text="@string/welcome_teacher"
           />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:padding="16dp">



                <Button
                    android:id="@+id/buttonSendAssignment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_homework"
                    android:text="@string/send_assignment_button"
                    android:backgroundTint="@color/teal_primary"
                    android:textColor="@android:color/white"
                    android:layout_marginBottom="12dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"/>
                <Button
                    android:id="@+id/buttonViewAssignment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_homework"
                    android:text="View Assignment Replies "
                    android:backgroundTint="@color/teal_primary"
                    android:textColor="@android:color/white"
                    android:layout_marginBottom="12dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"/>

                <Button
                    android:id="@+id/buttonViewSchedule"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_schedule"
                    android:text="@string/view_schedule_button"
                    android:backgroundTint="@color/teal_primary"
                    android:textColor="@android:color/white"
                    android:layout_marginBottom="12dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"/>

                <Button
                    android:id="@+id/buttonSendMessages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_mail"
                    android:text="@string/send_messagesn"
                    android:backgroundTint="@color/teal_primary"
                    android:textColor="@android:color/white"
                    android:layout_marginBottom="12dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"/>
                <Button
                    android:id="@+id/buttonViewReplies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="View Message Replies"
                    android:drawableLeft="@drawable/ic_mail"

                    android:backgroundTint="@color/teal_primary"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp" />
                <Button
                    android:id="@+id/buttonPublishMarks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/teal_primary"
                    android:textColor="@android:color/white"
                    android:drawableLeft="@drawable/ic_online_exam"
                    android:text="@string/publish_marks_button"

                    android:layout_marginBottom="12dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"/>

                <Button
                    android:id="@+id/buttonAddPreparation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_plan"
                    android:text="@string/add_preparatio"
                    android:backgroundTint="@color/teal_primary"
                    android:textColor="@android:color/white"
                    android:layout_marginBottom="12dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"/>
                <Button
                    android:id="@+id/resourceslerning"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_plan"
                    android:text="Upload Resource"
                    android:backgroundTint="@color/teal_primary"
                    android:textColor="@android:color/white"
                    android:layout_marginBottom="12dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"/>




            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <!-- Bottom Navigation Bar -->
    <LinearLayout
        android:id="@+id/customBottomNav"
        style="@style/customBottomNav">

        <!-- Profile -->
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="8dp">

            <ImageView
                android:id="@+id/profile"
                style="@style/BottomNavIconStyle"
                android:src="@drawable/ic_profile1"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- Home -->
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/white"
            android:padding="8dp">

            <ImageView
                android:id="@+id/home"
                style="@style/BottomNavIconStyle"
                android:src="@drawable/ic_home"
                app:tint="@color/teal_primary" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textColor="@color/teal_primary"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- Logout -->
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="8dp">

            <ImageView
                android:id="@+id/logout"
                style="@style/BottomNavIconStyle"
                android:src="@drawable/ic_logout"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>