<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/titleText"
       style="@style/titleText"
        android:text="Add New Subject"
         />

    <EditText
        android:id="@+id/editSubjectName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:hint="Subject Name" />

    <EditText
        android:id="@+id/editDescription"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hint="Description (max 200 characters)"
        android:maxLength="200"
        android:gravity="top"
        android:layout_marginTop="12dp"
        android:inputType="textMultiLine"/>

    <Spinner
        android:id="@+id/teacherSpinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"/>

    <Button
        android:id="@+id/btnAddSubject"
      style="@style/Button"
        android:text="@string/add_subject"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/customBottomNav"
        style="@style/customBottomNav">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="8dp">

            <ImageView
                android:id="@+id/profile"
                style="@style/BottomNavIconStyle"
                android:src="@drawable/ic_profile1"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="8dp">

            <ImageView
                android:id="@+id/home"
                style="@style/BottomNavIconStyle"
                android:src="@drawable/ic_home"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="8dp">

            <ImageView
                android:id="@+id/logout"
                style="@style/BottomNavIconStyle"
                android:src="@drawable/ic_logout"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
