<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <SearchView
            android:id="@+id/searchViewSurveys"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:iconifiedByDefault="false"
            android:queryHint="Search surveys..." />

    </LinearLayout>

    <ListView
        android:id="@+id/listViewSurveys"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:divider="@android:color/white"
        android:dividerHeight="15dp"
        android:layout_weight="1"
        android:padding="30dp"
        android:paddingTop="60dp"/>

    <LinearLayout
        android:id="@+id/customBottomNav"
        style="@style/customBottomNav">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="8dp">

            <ImageView
                android:id="@+id/profile"
                style="@style/BottomNavIconStyle"
                android:src="@drawable/ic_profile1"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="8dp">

            <ImageView
                android:id="@+id/home"
                style="@style/BottomNavIconStyle"
                android:src="@drawable/ic_home"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="8dp">

            <ImageView
                android:id="@+id/logout"
                style="@style/BottomNavIconStyle"
                android:src="@drawable/ic_logout"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
